<resources>
    <string name="app_name">InstaSnap</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello User!</string>
    <string name="logo">Logo</string>
    <string name="screen_mode">Screen Mode</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">profile_picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="upload_post">Upload Post</string>
    <string name="post_message">This is the uploading post page, click the Upload Post button and choose a photo from your library to upload.</string>
    <string name="PermErr">Upload permission was not granted, post uploading not available.</string>
</resources>