<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".RegisterView">


    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/register_email_text_input"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/register_password_text_input"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/register_progressBar"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_login"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center" />


</LinearLayout>